--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prettier-plugin-svelte": "^3.2.6",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.3"
   },
