--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "strict": true,
     "moduleResolution": "bundler",
     "paths": {
-      "$lib/*": ["./src/lib/*"]
+      "$lib/*": ["./src/lib/*"],
+      "$lib_server/*": ["./src/lib_server/*"]
     }
   }
   // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
