--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "svelte-check": "^3.6.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "vite": "^5.0.3",
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   },
   "type": "module",
   "dependencies": {
