update error handling
Connect refused는 에러 Response를 반환하지 않고 바로 에러를 만들어 냄,
반환 없이 에러를 만들어 내는 경우 이를 catch하여 임의의 에러 오브젝트를 반환하도록 수정

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@sentry/node": "^8.42.0",
+    "@sentry/sveltekit": "^8.42.0",
     "autoprefixer": "latest",
     "dotenv": "^16.4.5",
     "postcss": "latest",
